apps/f1-predictor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f1-predictor-ingress
  namespace: f1-predictor
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Prefix /f1-predictor;
    external-dns.alpha.kubernetes.io/hostname: f1.home.brettswift.com
    external-dns.alpha.kubernetes.io/target: home.brettswift.com
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - home.brettswift.com
    - f1.home.brettswift.com
    secretName: home-brettswift-com-tls
  rules:
  - host: f1.home.brettswift.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: f1-predictor
            port:
              number: 80
  - host: home.brettswift.com
    http:
      paths:
      - path: /f1-predictor(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: f1-predictor
            port:
              number: 80
